--- a/APISAE401/appsettings.json
+++ b/APISAE401/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "MedDBContext": "Server=localhost;port=5433;Database=s213_clubmed_v2; uid=postgres; password=postgres;",
+    "MedDBContext": "Server=localhost;port=5432;Database=s213_clubmed_v2; uid=postgres; password=Postgres;",
     "MedDBContextRemote": "Server=51.83.36.122;port=5432;Database=s213_clubmed_v2; uid=s213; password=NHfvV2; SearchPath=sae;"
   }
 }
